# Dr.Player

./: .gitignore  Cargo.toml  RELEASE_NOTES.md  TESTING.md  package-lock.json  vitest.config.js
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
TESTING_videos/: RESEARCH_NOTES.md  download_test_videos.ps1  inventory.csv
docs/: WEBVIEW_QUIRKS.md
src/: main.rs
ui/tests/: player.test.js
