[package]
name = "dr-player"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
wry = "0.39"
tao = "0.28"
ico = "0.3"

[build-dependencies]
winres = "0.1"