[package]
name = "dr-player"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
wry = { version = "0.39", features = ["fullscreen"] }
tao = "0.28"
ico = "0.3"
serde_json = "1"
rand = "0.8"

[build-dependencies]
winres = "0.1"